proj2/gen/request/RequestParser.java
// Generated from java-escape by ANTLR 4.11.1
package request;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class RequestParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.11.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		REQ=1, VOCAB=2, INPUTS=3, OUTPUTS=4, PRECONDITION=5, EFFECT=6, SUBCLASSOF=7, 
		EQUIVALENTTO=8, STRICTSUBCLASSOF=9, INTERSECTS=10, DISJOINTWITH=11, SAT=12, 
		UNSAT=13, BELONGS=14, OR=15, AND=16, NEG=17, T=18, F=19, MIN=20, EXACTLY=21, 
		MAX=22, VALUE=23, SOME=24, ONLY=25, SELF=26, INVERSE=27, THING=28, NOTHING=29, 
		OP=30, CP=31, OB=32, CB=33, COMMA=34, COLON=35, BLANK=36, TAB=37, NL=38, 
		ID=39, DBL=40, INT=41, STR=42, LINECOMMENTARY=43;
	public static final int
		RULE_req = 0, RULE_vocabulary = 1, RULE_ontologies = 2, RULE_inputs = 3, 
		RULE_iparams = 4, RULE_iparam = 5, RULE_outputs = 6, RULE_oparams = 7, 
		RULE_oparam = 8, RULE_type = 9, RULE_pairs_of_states = 10, RULE_pair_of_states = 11, 
		RULE_precondition = 12, RULE_effect = 13, RULE_sentences = 14, RULE_sentence = 15, 
		RULE_set = 16, RULE_set_and = 17, RULE_set_base = 18, RULE_property_set = 19, 
		RULE_neg_set = 20, RULE_inv_property_set = 21, RULE_inv_property = 22, 
		RULE_class_set = 23, RULE_anonymous_set = 24, RULE_set1 = 25, RULE_terms = 26;
	private static String[] makeRuleNames() {
		return new String[] {
			"req", "vocabulary", "ontologies", "inputs", "iparams", "iparam", "outputs", 
			"oparams", "oparam", "type", "pairs_of_states", "pair_of_states", "precondition", 
			"effect", "sentences", "sentence", "set", "set_and", "set_base", "property_set", 
			"neg_set", "inv_property_set", "inv_property", "class_set", "anonymous_set", 
			"set1", "terms"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'req'", "'Vocabulary'", "'Inputs'", "'Outputs'", "'Precondition'", 
			"'Effect'", "'subclassOf'", "'equivalentTo'", "'strictSubclassOf'", "'intersects'", 
			"'disjointWith'", "'satisfiable'", "'unsatisfiable'", "'belongs'", "'or'", 
			"'and'", "'not'", "'true'", "'false'", "'min'", "'exactly'", "'max'", 
			"'value'", "'some'", "'only'", "'self'", "'inverse'", "'Thing'", "'NoThing'", 
			"'('", "')'", "'{'", "'}'", "','", "':'", "' '", "'\\t'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "REQ", "VOCAB", "INPUTS", "OUTPUTS", "PRECONDITION", "EFFECT", 
			"SUBCLASSOF", "EQUIVALENTTO", "STRICTSUBCLASSOF", "INTERSECTS", "DISJOINTWITH", 
			"SAT", "UNSAT", "BELONGS", "OR", "AND", "NEG", "T", "F", "MIN", "EXACTLY", 
			"MAX", "VALUE", "SOME", "ONLY", "SELF", "INVERSE", "THING", "NOTHING", 
			"OP", "CP", "OB", "CB", "COMMA", "COLON", "BLANK", "TAB", "NL", "ID", 
			"DBL", "INT", "STR", "LINECOMMENTARY"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "java-escape"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public RequestParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ReqContext extends ParserRuleContext {
		public TerminalNode REQ() { return getToken(RequestParser.REQ, 0); }
		public TerminalNode ID() { return getToken(RequestParser.ID, 0); }
		public VocabularyContext vocabulary() {
			return getRuleContext(VocabularyContext.class,0);
		}
		public InputsContext inputs() {
			return getRuleContext(InputsContext.class,0);
		}
		public OutputsContext outputs() {
			return getRuleContext(OutputsContext.class,0);
		}
		public Pairs_of_statesContext pairs_of_states() {
			return getRuleContext(Pairs_of_statesContext.class,0);
		}
		public TerminalNode EOF() { return getToken(RequestParser.EOF, 0); }
		public ReqContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_req; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RequestParserListener ) ((RequestParserListener)listener).enterReq(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RequestParserListener ) ((RequestParserListener)listener).exitReq(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RequestParserVisitor ) return ((RequestParserVisitor<? extends T>)visitor).visitReq(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ReqContext req() throws RecognitionException {
		ReqContext _localctx = new ReqContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_req);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(54);
			match(REQ);
			setState(55);
			match(ID);
			setState(56);
			vocabulary();
			setState(57);
			inputs();
			setState(58);
			outputs();
			setState(59);
			pairs_of_states();
			setState(60);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class VocabularyContext extends ParserRuleContext {
		public TerminalNode VOCAB() { return getToken(RequestParser.VOCAB, 0); }
		public TerminalNode COLON() { return getToken(RequestParser.COLON, 0); }
		public OntologiesContext ontologies() {
			return getRuleContext(OntologiesContext.class,0);
		}
		public VocabularyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_vocabulary; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RequestParserListener ) ((RequestParserListener)listener).enterVocabulary(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RequestParserListener ) ((RequestParserListener)listener).exitVocabulary(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RequestParserVisitor ) return ((RequestParserVisitor<? extends T>)visitor).visitVocabulary(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VocabularyContext vocabulary() throws RecognitionException {
		VocabularyContext _localctx = new VocabularyContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_vocabulary);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(62);
			match(VOCAB);
			setState(63);
			match(COLON);
			setState(64);
			ontologies();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class OntologiesContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(RequestParser.ID, 0); }
		public TerminalNode COMMA() { return getToken(RequestParser.COMMA, 0); }
		public OntologiesContext ontologies() {
			return getRuleContext(OntologiesContext.class,0);
		}
		public OntologiesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ontologies; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RequestParserListener ) ((RequestParserListener)listener).enterOntologies(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RequestParserListener ) ((RequestParserListener)listener).exitOntologies(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RequestParserVisitor ) return ((RequestParserVisitor<? extends T>)visitor).visitOntologies(this);
			else return visitor.visitChildren(this);
		}
	}

	public final OntologiesContext ontologies() throws RecognitionException {
		OntologiesContext _localctx = new OntologiesContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_ontologies);
		try {
			setState(70);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(66);
				match(ID);
				setState(67);
				match(COMMA);
				setState(68);
				ontologies();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(69);
				match(ID);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class InputsContext extends ParserRuleContext {
		public TerminalNode INPUTS() { return getToken(RequestParser.INPUTS, 0); }
		public TerminalNode COLON() { return getToken(RequestParser.COLON, 0); }
		public IparamsContext iparams() {
			return getRuleContext(IparamsContext.class,0);
		}
		public InputsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_inputs; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RequestParserListener ) ((RequestParserListener)listener).enterInputs(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RequestParserListener ) ((RequestParserListener)listener).exitInputs(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RequestParserVisitor ) return ((RequestParserVisitor<? extends T>)visitor).visitInputs(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InputsContext inputs() throws RecognitionException {
		InputsContext _localctx = new InputsContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_inputs);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(72);
			match(INPUTS);
			setState(73);
			match(COLON);
			setState(75);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ID) {
				{
				setState(74);
				iparams();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class IparamsContext extends ParserRuleContext {
		public IparamContext iparam() {
			return getRuleContext(IparamContext.class,0);
		}
		public TerminalNode COMMA() { return getToken(RequestParser.COMMA, 0); }
		public IparamsContext iparams() {
			return getRuleContext(IparamsContext.class,0);
		}
		public IparamsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_iparams; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RequestParserListener ) ((RequestParserListener)listener).enterIparams(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RequestParserListener ) ((RequestParserListener)listener).exitIparams(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RequestParserVisitor ) return ((RequestParserVisitor<? extends T>)visitor).visitIparams(this);
			else return visitor.visitChildren(this);
		}
	}

	public final IparamsContext iparams() throws RecognitionException {
		IparamsContext _localctx = new IparamsContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_iparams);
		try {
			setState(82);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(77);
				iparam();
				setState(78);
				match(COMMA);
				setState(79);
				iparams();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(81);
				iparam();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class IparamContext extends ParserRuleContext {
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode ID() { return getToken(RequestParser.ID, 0); }
		public IparamContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_iparam; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RequestParserListener ) ((RequestParserListener)listener).enterIparam(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RequestParserListener ) ((RequestParserListener)listener).exitIparam(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RequestParserVisitor ) return ((RequestParserVisitor<? extends T>)visitor).visitIparam(this);
			else return visitor.visitChildren(this);
		}
	}

	public final IparamContext iparam() throws RecognitionException {
		IparamContext _localctx = new IparamContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_iparam);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(84);
			type();
			setState(85);
			match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class OutputsContext extends ParserRuleContext {
		public TerminalNode OUTPUTS() { return getToken(RequestParser.OUTPUTS, 0); }
		public TerminalNode COLON() { return getToken(RequestParser.COLON, 0); }
		public OparamsContext oparams() {
			return getRuleContext(OparamsContext.class,0);
		}
		public OutputsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_outputs; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RequestParserListener ) ((RequestParserListener)listener).enterOutputs(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RequestParserListener ) ((RequestParserListener)listener).exitOutputs(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RequestParserVisitor ) return ((RequestParserVisitor<? extends T>)visitor).visitOutputs(this);
			else return visitor.visitChildren(this);
		}
	}

	public final OutputsContext outputs() throws RecognitionException {
		OutputsContext _localctx = new OutputsContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_outputs);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(87);
			match(OUTPUTS);
			setState(88);
			match(COLON);
			setState(90);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ID) {
				{
				setState(89);
				oparams();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class OparamsContext extends ParserRuleContext {
		public OparamContext oparam() {
			return getRuleContext(OparamContext.class,0);
		}
		public TerminalNode COMMA() { return getToken(RequestParser.COMMA, 0); }
		public OparamsContext oparams() {
			return getRuleContext(OparamsContext.class,0);
		}
		public OparamsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_oparams; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RequestParserListener ) ((RequestParserListener)listener).enterOparams(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RequestParserListener ) ((RequestParserListener)listener).exitOparams(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RequestParserVisitor ) return ((RequestParserVisitor<? extends T>)visitor).visitOparams(this);
			else return visitor.visitChildren(this);
		}
	}

	public final OparamsContext oparams() throws RecognitionException {
		OparamsContext _localctx = new OparamsContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_oparams);
		try {
			setState(97);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(92);
				oparam();
				setState(93);
				match(COMMA);
				setState(94);
				oparams();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(96);
				oparam();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class OparamContext extends ParserRuleContext {
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode ID() { return getToken(RequestParser.ID, 0); }
		public OparamContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_oparam; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RequestParserListener ) ((RequestParserListener)listener).enterOparam(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RequestParserListener ) ((RequestParserListener)listener).exitOparam(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RequestParserVisitor ) return ((RequestParserVisitor<? extends T>)visitor).visitOparam(this);
			else return visitor.visitChildren(this);
		}
	}

	public final OparamContext oparam() throws RecognitionException {
		OparamContext _localctx = new OparamContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_oparam);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(99);
			type();
			setState(100);
			match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TypeContext extends ParserRuleContext {
		public List<TerminalNode> ID() { return getTokens(RequestParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(RequestParser.ID, i);
		}
		public TerminalNode COLON() { return getToken(RequestParser.COLON, 0); }
		public TypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_type; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RequestParserListener ) ((RequestParserListener)listener).enterType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RequestParserListener ) ((RequestParserListener)listener).exitType(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RequestParserVisitor ) return ((RequestParserVisitor<? extends T>)visitor).visitType(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TypeContext type() throws RecognitionException {
		TypeContext _localctx = new TypeContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_type);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(102);
			match(ID);
			setState(103);
			match(COLON);
			setState(104);
			match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Pairs_of_statesContext extends ParserRuleContext {
		public List<Pair_of_statesContext> pair_of_states() {
			return getRuleContexts(Pair_of_statesContext.class);
		}
		public Pair_of_statesContext pair_of_states(int i) {
			return getRuleContext(Pair_of_statesContext.class,i);
		}
		public Pairs_of_statesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_pairs_of_states; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RequestParserListener ) ((RequestParserListener)listener).enterPairs_of_states(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RequestParserListener ) ((RequestParserListener)listener).exitPairs_of_states(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RequestParserVisitor ) return ((RequestParserVisitor<? extends T>)visitor).visitPairs_of_states(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Pairs_of_statesContext pairs_of_states() throws RecognitionException {
		Pairs_of_statesContext _localctx = new Pairs_of_statesContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_pairs_of_states);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(107); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(106);
				pair_of_states();
				}
				}
				setState(109); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==PRECONDITION );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Pair_of_statesContext extends ParserRuleContext {
		public PreconditionContext precondition() {
			return getRuleContext(PreconditionContext.class,0);
		}
		public EffectContext effect() {
			return getRuleContext(EffectContext.class,0);
		}
		public Pair_of_statesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_pair_of_states; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RequestParserListener ) ((RequestParserListener)listener).enterPair_of_states(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RequestParserListener ) ((RequestParserListener)listener).exitPair_of_states(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RequestParserVisitor ) return ((RequestParserVisitor<? extends T>)visitor).visitPair_of_states(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Pair_of_statesContext pair_of_states() throws RecognitionException {
		Pair_of_statesContext _localctx = new Pair_of_statesContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_pair_of_states);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(111);
			precondition();
			setState(112);
			effect();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class PreconditionContext extends ParserRuleContext {
		public TerminalNode PRECONDITION() { return getToken(RequestParser.PRECONDITION, 0); }
		public TerminalNode COLON() { return getToken(RequestParser.COLON, 0); }
		public SentencesContext sentences() {
			return getRuleContext(SentencesContext.class,0);
		}
		public PreconditionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_precondition; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RequestParserListener ) ((RequestParserListener)listener).enterPrecondition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RequestParserListener ) ((RequestParserListener)listener).exitPrecondition(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RequestParserVisitor ) return ((RequestParserVisitor<? extends T>)visitor).visitPrecondition(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PreconditionContext precondition() throws RecognitionException {
		PreconditionContext _localctx = new PreconditionContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_precondition);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(114);
			match(PRECONDITION);
			setState(115);
			match(COLON);
			setState(116);
			sentences();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class EffectContext extends ParserRuleContext {
		public TerminalNode EFFECT() { return getToken(RequestParser.EFFECT, 0); }
		public TerminalNode COLON() { return getToken(RequestParser.COLON, 0); }
		public SentencesContext sentences() {
			return getRuleContext(SentencesContext.class,0);
		}
		public EffectContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_effect; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RequestParserListener ) ((RequestParserListener)listener).enterEffect(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RequestParserListener ) ((RequestParserListener)listener).exitEffect(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RequestParserVisitor ) return ((RequestParserVisitor<? extends T>)visitor).visitEffect(this);
			else return visitor.visitChildren(this);
		}
	}

	public final EffectContext effect() throws RecognitionException {
		EffectContext _localctx = new EffectContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_effect);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(118);
			match(EFFECT);
			setState(119);
			match(COLON);
			setState(120);
			sentences();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SentencesContext extends ParserRuleContext {
		public SentenceContext sentence() {
			return getRuleContext(SentenceContext.class,0);
		}
		public TerminalNode COMMA() { return getToken(RequestParser.COMMA, 0); }
		public SentencesContext sentences() {
			return getRuleContext(SentencesContext.class,0);
		}
		public SentencesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sentences; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RequestParserListener ) ((RequestParserListener)listener).enterSentences(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RequestParserListener ) ((RequestParserListener)listener).exitSentences(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RequestParserVisitor ) return ((RequestParserVisitor<? extends T>)visitor).visitSentences(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SentencesContext sentences() throws RecognitionException {
		SentencesContext _localctx = new SentencesContext(_ctx, getState());
		enterRule(_localctx, 28, RULE_sentences);
		try {
			setState(128);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(122);
				sentence();
				setState(123);
				match(COMMA);
				setState(124);
				sentences();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(126);
				sentence();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
